[package]
name = "integration-suite"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Kaleidoscope cross-crate integration suite. No library; only tests. Proves the platform's v1 adapters compose under shared aegis::TenantId and survive restart together. The first evidence the platform is one thing, not 18 disconnected libraries."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "integration_suite"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }

[dev-dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
augur = { path = "../augur", version = "0.1.0" }
cinder = { path = "../cinder", version = "0.1.0" }
lumen = { path = "../lumen", version = "0.1.0" }
pulse = { path = "../pulse", version = "0.1.0" }
ray = { path = "../ray", version = "0.1.0" }
self-observe = { path = "../self-observe", version = "0.1.0" }
serde_json = { workspace = true }
sluice = { path = "../sluice", version = "0.1.0" }
strata = { path = "../strata", version = "0.1.0" }

[[test]]
name = "v1_three_adapters_compose_under_restart"
path = "tests/v1_three_adapters_compose_under_restart.rs"

[[test]]
name = "v0_augur_pulse_anomaly_pipeline"
path = "tests/v0_augur_pulse_anomaly_pipeline.rs"

[[test]]
name = "v1_six_bridges_compose_into_single_otlp_stream"
path = "tests/v1_six_bridges_compose_into_single_otlp_stream.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
