[package]
name = "integration-suite"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Kaleidoscope cross-crate integration suite. No library; only tests. Proves the platform's v1 adapters compose under shared aegis::TenantId and survive restart together. The first evidence the platform is one thing, not 18 disconnected libraries."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "integration_suite"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }

[dev-dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
augur = { path = "../augur", version = "0.1.0" }
cinder = { path = "../cinder", version = "0.2.0" }
lumen = { path = "../lumen", version = "0.1.0" }
pulse = { path = "../pulse", version = "0.1.0" }
ray = { path = "../ray", version = "0.1.0" }
sluice = { path = "../sluice", version = "0.2.0" }
strata = { path = "../strata", version = "0.1.0" }

[[test]]
name = "v1_three_adapters_compose_under_restart"
path = "tests/v1_three_adapters_compose_under_restart.rs"

[[test]]
name = "v1_three_durable_stores_compose"
path = "tests/v1_three_durable_stores_compose.rs"

[[test]]
name = "v0_augur_pulse_anomaly_pipeline"
path = "tests/v0_augur_pulse_anomaly_pipeline.rs"

# Structural acceptance for perf-kpi-ci-non-gating-v0 (ADR-0070): parses
# .github/workflows/ci.yml and asserts the post-DELIVER CI shape. No
# crate deps, no spawned process — it reads the committed workflow file.
[[test]]
name = "v0_perf_kpi_ci_non_gating_structure"
path = "tests/v0_perf_kpi_ci_non_gating_structure.rs"

# Structural acceptance for speed-up-local-precommit-v0 (ADR-0072): parses
# scripts/hooks/pre-commit, scripts/ci-watch.sh, .github/workflows/ci.yml,
# and walks crates/**/tests/*.rs. Asserts the post-DELIVER fast-hook shape.
# No crate deps, no spawned process — it reads committed scripts/files.
[[test]]
name = "v0_fast_precommit_structure"
path = "tests/v0_fast_precommit_structure.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
