[package]
name = "kaleidoscope-cli"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Kaleidoscope CLI — operator-facing runnable binary. Wires Lumen v1 + Cinder v1 + Sluice (in-process queue) + self-observe so operators can ingest OTLP-style log records via stdin, read them back with server-side --service / --min-severity / --since / --until filters, and trigger compact on a cadence. --observe-otlp appends NDJSON OTLP-JSON metrics from three crates (lumen / cinder / sluice) into a single file a sidecar can forward to any real OTLP collector. From libraries to a product."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "kaleidoscope_cli"
path = "src/lib.rs"

[[bin]]
name = "kaleidoscope-cli"
path = "src/main.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
cinder = { path = "../cinder", version = "0.1.0" }
lumen = { path = "../lumen", version = "0.1.0" }
pulse = { path = "../pulse", version = "0.1.0" }
self-observe = { path = "../self-observe", version = "0.1.0" }
serde_json = { workspace = true }
sluice = { path = "../sluice", version = "0.1.0" }

[[test]]
name = "ingest_and_read_roundtrip"
path = "tests/ingest_and_read_roundtrip.rs"

[[test]]
name = "observe_otlp_flag"
path = "tests/observe_otlp_flag.rs"

[[test]]
name = "compact"
path = "tests/compact.rs"

[[test]]
name = "read_predicate_flags"
path = "tests/read_predicate_flags.rs"

[[test]]
name = "read_time_range_flags"
path = "tests/read_time_range_flags.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
