[package]
name = "kaleidoscope-gateway"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later: the host composition binary that runs aperture
# with the StorageSink injected. Long-lived operator-infrastructure
# process, same posture as aperture.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Host composition binary: runs the aperture OTLP gateway with the StorageSink injected, persisting accepted records into the durable Kaleidoscope pillars."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[[bin]]
name = "kaleidoscope-gateway"
path = "src/main.rs"

[dependencies]
# The gateway core: `Config`, `spawn`, `Handle`.
aperture = { path = "../aperture", version = "0.1.0" }

# The sink this binary injects.
aperture-storage-sink = { path = "../aperture-storage-sink", version = "0.1.0" }

# The durable log store the binary opens and hands to the sink.
lumen = { path = "../lumen", version = "0.1.0" }

# Async runtime for `main` and the SIGTERM/drain loop (mirrors
# aperture's runtime feature set).
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

# Structured startup events on the same `tracing` stream aperture uses.
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
