[package]
name = "kaleidoscope-gateway"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later: the host composition binary that runs aperture
# with the StorageSink injected. Long-lived operator-infrastructure
# process, same posture as aperture.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Host composition binary: runs the aperture OTLP gateway with the StorageSink injected, persisting accepted records into the durable Kaleidoscope pillars."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "kaleidoscope_gateway"
path = "src/lib.rs"

[[bin]]
name = "kaleidoscope-gateway"
path = "src/main.rs"

[dependencies]
# The gateway core: `Config`, `spawn`, `Handle`.
aperture = { path = "../aperture", version = "0.1.0" }

# The sink this binary injects.
aperture-storage-sink = { path = "../aperture-storage-sink", version = "0.1.0" }

# The durable log store the binary opens and hands to the sink.
lumen = { path = "../lumen", version = "0.1.0" }

# The durable trace store the binary opens and hands to the sink.
ray = { path = "../ray", version = "0.1.0" }

# The durable metric store the binary opens and hands to the sink.
pulse = { path = "../pulse", version = "0.1.0" }

# Async runtime for `main` and the SIGTERM/drain loop (mirrors
# aperture's runtime feature set).
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

# Structured startup events on the same `tracing` stream aperture uses.
tracing = "0.1"

# JSON-to-stderr subscriber for the gateway's own early lifecycle events
# (gateway_starting, health.startup.refused). Matched verbatim to
# aperture's line (crates/aperture/Cargo.toml:60) and the read tier;
# per-crate dep, not a workspace promotion. DELIVER (Crafty) fills the
# `init_tracing` body with the aperture-posture builder that uses this.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "registry"] }

[dev-dependencies]
# Parse captured child stderr lines as JSON to interrogate the structured
# `event` field in the black-box subprocess acceptance suite.
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[[test]]
name = "slice_01_tracing_subscriber"
path = "tests/slice_01_tracing_subscriber.rs"
