[package]
name = "loom"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later because Loom is a platform-class change-control
# surface for the operator's rule + dashboard + policy catalogues,
# symmetric with Aperture, Sieve, Codex, Prism, Beacon. See
# `LICENSING.md` for the rationale and the per-crate table.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Loom — Kaleidoscope's Git-backed change-control surface for operator-authored TOML catalogues. v0 manages Beacon rule directories; v1 extends to Sieve sampling, Prism dashboards, Aegis policies."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "loom"
path = "src/lib.rs"

[[bin]]
name = "loom"
path = "src/main.rs"

[[test]]
name = "slice_01_validate"
path = "tests/slice_01_validate.rs"

[dependencies]
beacon = { path = "../beacon", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
