[package]
name = "lumen"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Lumen — Kaleidoscope's first-party log storage engine. v0 ships the LogStore trait + an InMemoryLogStore adapter. v1 adds FileBackedLogStore with NDJSON WAL durability + snapshot compaction. Parquet / DataFusion / Tantivy / RocksDB adapters land at v2 behind the same trait. OTLP-shaped, per-tenant, time-range and predicate query."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "lumen"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

# Regex grammar for the body-regex predicate arm (ADR-0056
# log-body-regex-search-v0). RE2-derived, linear-time, no
# catastrophic backtracking — the same crate already used by
# query-api for the metric-label =~ / !~ matchers (ADR-0046
# Decision 1). The workspace Cargo.lock already pins
# regex = "1.12.3" via query-api's direct dep, so this new direct
# edge on lumen resolves to the same lock pin with zero
# Cargo.lock diff. Not a wildcard, for cargo deny Gate 4.
regex = "1"

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_structured_query"
path = "tests/slice_02_structured_query.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

[[test]]
name = "v1_slice_03_torn_tail_recovery"
path = "tests/v1_slice_03_torn_tail_recovery.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
